--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ function submitForm() {
     mode: "NEW"
   });
 
-  fetch("PASTE_WEB_APP_URL_HERE", {
+  fetch("https://script.google.com/macros/s/AKfycbzLDkzwULchmr2kGLI-_9r5TvfXoZClVdv4RTk5usAoLiS0XK2aGHa0uCIq6XPIDumN/exec", {
     method: "POST",
     body: payload
   });
