--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@ body {
 
 h2 {
   text-align: center;
-  margin-bottom: 10px;
+  margin-top: 0;        /* naikkan tajuk */
+  margin-bottom: 8px;  /* rapat sikit dengan form */
 }
+
 
 label {
   font-weight: bold;
