--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ body {
   max-width: 420px;
   margin: auto;
   background: #ffffff;
-  padding: 16px 20px 20px; /* tajuk naik sikit */
+  padding: 16px 20px 20px;
   border-radius: 8px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
   position: relative;
 }
 
-/* SUCCESS BOX SLIGHTLY BIGGER */
+/* SUCCESS BOX */
 .success-container {
   max-width: 520px;
 }
@@ -52,8 +52,8 @@ input[type="tel"] {
   margin: 5px 0 4px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  text-transform: uppercase;
   box-sizing: border-box;
+  text-transform: uppercase; /* FORCE UPPERCASE WHILE TYPING */
 }
 
 ::placeholder {
@@ -122,10 +122,12 @@ button.enabled {
   font-size: 14px;
 }
 
+/* FORCE UPPERCASE FOR ALL USER DATA DISPLAY */
 .summary {
   font-size: 14px;
   margin-top: 10px;
   line-height: 1.6;
+  text-transform: uppercase;
 }
 
 /* WATERMARK */
@@ -219,7 +221,7 @@ button.enabled {
   <div class="summary" id="summaryBox"></div>
 
   <div class="consent" style="margin-top:15px;">
-    ✔ Consent confirmed for official communication purposes.
+    ✔ CONSENT CONFIRMED FOR OFFICIAL COMMUNICATION PURPOSES.
   </div>
 
   <p style="text-align:center;font-size:13px;">
@@ -316,15 +318,15 @@ function submitForm() {
   successBox.style.display = "block";
   watermark.style.display = "block";
 
-  refDisplay.innerText = "Reference No: " + ref;
+  refDisplay.innerText = "REFERENCE NO: " + ref;
 
   summaryBox.innerHTML =
-    `<div><b>Agency:</b> ${agency.value}</div>
-     <div><b>PIC Name 1:</b> ${pic1.value}</div>
-     ${pic2.value ? `<div><b>PIC Name 2:</b> ${pic2.value}</div>` : ""}
-     <div><b>Contact (Mandatory):</b> ${contact1.value}</div>
-     ${contact2.value ? `<div><b>Contact (Optional):</b> ${contact2.value}</div>` : ""}
-     <div><b>WhatsApp No:</b> ${whatsapp.value}</div>`;
+    `<div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
+     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
+     ${pic2.value ? `<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>` : ""}
+     <div><b>CONTACT (MANDATORY):</b> ${contact1.value}</div>
+     ${contact2.value ? `<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>` : ""}
+     <div><b>WHATSAPP NO:</b> ${whatsapp.value}</div>`;
 
   return false;
 }
